# expectedpoints

./: README.md  csv_additions.py  generate_context.py  nba_xp_dashboard.html  player_context_stats.csv  pyproject.toml  xp.csv  xp_by_action_type.csv  xp_by_shot_zone.csv  xp_comprehensive.csv  xp_contextual_additions.py  xp_prediction.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
